--- a/_config.yml
+++ b/_config.yml
@@ -6,17 +6,17 @@ kramdown:
   input: GFM
 
 # 作者信息
-author: 
-  name: 闫肃
-  email: suyan0830@gmail.com
-  link: http://yansu.org
-  weibo: http://weibo.com/yansu0711
-  github: http://github.com/suyan
+author:
+  name: MXue
+  email: xmy2232867@gmail.com
+  link: http://xmy2232867.github.io
+  weibo: http://weibo.com/xuemaoyuan
+  github: http://github.com/xmy2232867
 
 # 站点信息
-title: 闫肃的博客 
-description: 闫肃的博客
-url: http://yansu.org
+title: xm_my的博客
+description: xm_my的博客
+url: http://xmy2232867.github.io
 rss_url: /pages/atom.xml
 
 # avatar头像及Favicon
@@ -24,10 +24,10 @@ avatar: http://7u2ho6.com1.z0.glb.clouddn.com/site-avatar.png
 favicon: http://7u2ho6.com1.z0.glb.clouddn.com/site-favicon.ico
 
 # google analytics 设置
-ga:
-  id: UA-54767140-1
-  url: yansu.org
+#ga:
+#  id: UA-54767140-1
+#  url: yansu.org
 
 # disqus 设置
-disqus:
-  shortname: suyan-zh
+#disqus:
+#  shortname: suyan-zh
